Remove audit, onbehalfof, GET of collections, change fanout username verification